welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:5: error: not found: value x
if (x == 1 || x == 10) (return true)
    ^